--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
-body{
+:root {
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573a37 ;
+
+}
+
+body {
     background-color: #312e20;
 }
 
-#page{
+#page {
     box-sizing: border-box;
     width: 800px;
     padding: 24px;
@@ -12,7 +19,22 @@ body{
 
 }
 
-img{
+img {
+
     border-radius: 16px;
-    width: 400px;
+    width: 754px;
+}
+
+h1{
+
+    line-height: 140%;
+    font-size: 40px;
+}
+
+h2{
+    font-size: 24px;
+}
+
+h1, h2 {
+    color: #291b1a;
 }
