--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 :root {
     font-family: "Alice", serif;
     line-height: 150%;
@@ -25,10 +29,23 @@ img {
     width: 754px;
 }
 
+main{
+    padding: 24px;
+}
+
+section + section {
+    margin-top: 24px;
+}
+
+#about p + p{
+    margin-top: 12px;
+}
+
 h1{
 
     line-height: 140%;
     font-size: 40px;
+    
 }
 
 h2{
@@ -37,4 +54,10 @@ h2{
 
 h1, h2 {
     color: #291b1a;
+    margin-bottom: 4px;
+    line-height: 150%;
+}
+
+ul{
+    padding-left: 24px;
 }
